# Crayon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Core/: Application.cpp  Application.hpp  GraphicsDevice.h  Logger.cpp  Logger.hpp  Main.cpp  Platform.hpp  Window.cpp  Window.hpp
Dependencies/: vcpkg.json
System/: Main.cpp
